--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
   "types": "./index.d.ts",
   "dependencies": {
     "aws-sdk": "2.177.0",
-    "js-cookie": "^2.1.4"
+    "js-cookie": "^2.1.4",
+    "json-loader": "^0.5.7"
   },
   "devDependencies": {
     "babel-cli": "^6.23.0",
